--- a/examples/navbar.html
+++ b/examples/navbar.html
@@ -45,7 +45,7 @@
       </li>      
     </ul>
 <ul class="nav navbar-nav navbar-right">      
-      <li><a href="/Users/ranjith.arusamy/OneDrive%20-%20Accenture/OPS%20Matrix/design2/login.html"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
@@ -130,7 +130,7 @@
 <footer>
 <nav class="navbar navbar-inverse navbar-fixed-bottom navbar-relative">
  <div class="container footer-container"> 
-    <span class="pull-right">&copy; Copyright 2018 JPM Chase...</span>
+    <span class="pull-right">&copy; Copyright 2018...</span>
   </div>
 </nav>
 </footer>
